--- a/src/app/genre/genre-detail/genre-detail.component.html
+++ b/src/app/genre/genre-detail/genre-detail.component.html
@@ -1,6 +1,8 @@
 
 <div class="container">
-  <h1>{{genre.name}}</h1>
+  <div class="top">
+    <h1>{{genre.name}}</h1>
+  </div>
   <div class="cards">
     @for (playlist of playlists; track playlist) {
       <app-public-playlist-card [playlist]="playlist"></app-public-playlist-card>
