--- a/src/app/playlists/playlist-detail/playlist-detail.component.scss
+++ b/src/app/playlists/playlist-detail/playlist-detail.component.scss
@@ -13,7 +13,7 @@
       justify-content: flex-start;
       gap: 20px;
       .image{
-        width: 200px;
+        min-width: 200px;
         height: 200px;
         display: flex;
         align-items: center;
