--- a/src/app/user/settings/settings.component.html
+++ b/src/app/user/settings/settings.component.html
@@ -3,13 +3,8 @@
     <h1>Your info</h1>
     <div class="rows">
       <div class="row">
-        <p>First name</p>
-        <p>{{user.first_name}}</p>
-      </div>
-      <mat-divider></mat-divider>
-      <div class="row">
-        <p>Last name</p>
-        <p>{{user.last_name}}</p>
+        <p>Username</p>
+        <p>{{user.username}}</p>
       </div>
       <mat-divider></mat-divider>
       <div class="row">
