--- a/src/app/user/liked/liked.component.html
+++ b/src/app/user/liked/liked.component.html
@@ -24,7 +24,8 @@
         <app-track-table [tracks]="filteredTracks" [from]="fromInfo"></app-track-table>
       </ng-container>-->
           <!--<ng-container *ngIf="filteredTracks.length == 0 && !input.value.length">-->
-        <app-track-table [tracks]="_trackLikeService.getLikedTracks()" [from]="fromInfo"></app-track-table>
+<!--        <app-tracks-wrapper [tracks]="this._trackLikeService.getLikedTracks()" [from]="fromInfo"></app-tracks-wrapper>-->
+        <app-track-table [tracks]="this._trackLikeService.getLikedTracks()" [from]="fromInfo"></app-track-table>
         <div class="loading">
           @if (loading) {
             <mat-progress-spinner diameter="40" mode="indeterminate"></mat-progress-spinner>
