--- a/src/app/queue/queue.component.scss
+++ b/src/app/queue/queue.component.scss
@@ -76,6 +76,7 @@
         flex-direction: row;
         align-items: center;
         justify-content: flex-start;
+
       }
       .title{
         font-size: 25px;
@@ -189,6 +190,10 @@
       .artists{
         font-size: 12.5px;
         color: var(--light-text);
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        width: 280px;
         a{
           color: var(--light-text);
         }
