--- a/src/app/albums/album-detail/album-detail.component.html
+++ b/src/app/albums/album-detail/album-detail.component.html
@@ -34,9 +34,7 @@
         </div>
       </div>
     } @else {
-      <div class="loading">
-        <app-loading></app-loading>
-      </div>
+        <app-loader></app-loader>
     }
   </div>
   @if (isLoaded;) {
