--- a/src/app/core/loader/loader.component.scss
+++ b/src/app/core/loader/loader.component.scss
@@ -1,6 +1,6 @@
 .loader-container{
-  position: fixed;
-  top: 0px;
+  position: absolute;
+  top: 60px;
   bottom: 0;
   right: 0;
   left: 0;
@@ -11,6 +11,7 @@
   gap: 20px;
   backdrop-filter: blur(10px);
   background: rgba(10, 10, 10, 0.84);
+  min-height: 100vh;
 }
 .loader{
   width: 12px;
