--- a/src/app/user/profile/profile.component.scss
+++ b/src/app/user/profile/profile.component.scss
@@ -33,6 +33,11 @@
         .profile-image{
           border-radius: 50%;
         }
+        .default{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
         &:hover{
           .change-image{
             .choose{
@@ -61,6 +66,22 @@
           background-size: cover;
           background-repeat: no-repeat;
           background-position: center;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          .icon{
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: var(--secondary-black);
+            mat-icon{
+              font-size: 50px;
+              width: 50px;
+              height: 50px;
+            }
+          }
           img{
             height: auto;
             width: 100%;
