sidenav links, username update

--- a/src/app/core/sidenav/nav-links/nav-links.component.html
+++ b/src/app/core/sidenav/nav-links/nav-links.component.html
@@ -35,7 +35,7 @@
   @if (userService.userLoaded()) {
     <li>
       <a routerLink="/user/liked" routerLinkActive="active">
-        <mat-icon>favorite_border</mat-icon>
+        <mat-icon>favorite</mat-icon>
         Liked tracks
       </a>
     </li>
