--- a/src/app/playlists/create-playlist-dialog/create-playlist-dialog.component.html
+++ b/src/app/playlists/create-playlist-dialog/create-playlist-dialog.component.html
@@ -1,12 +1,12 @@
-<h2 mat-dialog-title>Create new playlist</h2>
+<h2 mat-dialog-title>{{isEdit ? 'Edit playlist' : 'Create new playlist'}}</h2>
 <div mat-dialog-content class="user-ui">
   <form class="form" [formGroup]="playlist" enctype="multipart/form-data">
     <div class="form-group top">
       <div class="right">
         <div class="upload">
           <button type="button" (click)="imageUpload.click()">
-            @if (selectedFile !== null) {
-              <img #image/>
+            @if (selectedFile !== null || isEdit) {
+              <img #image src="{{isEdit ? this.data.image_url : 'assets/icons-svg/select.svg'}}"/>
             }
             @if (selectedFile === null) {
               <img class="default" src="assets/icons-svg/select.svg"/>
@@ -64,5 +64,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button mat-dialog-close class="white cancel">Cancel</button>
-  <button mat-button cdkFocusInitial  (click)="confirm()" class="white create">Create</button>
+  <button mat-button cdkFocusInitial  (click)="!isEdit ? confirm() : update()" class="white create">{{!isEdit ? 'Confirm' : 'Update'}}</button>
 </div>
