--- a/src/app/core/sidenav/sidenav.component.html
+++ b/src/app/core/sidenav/sidenav.component.html
@@ -25,7 +25,7 @@
                 <ng-template matTabContent>
                   <div class="playlists">
                     <ul>
-                      @for(playlist of (_playlistService.playlists$ | async); track playlist.id){
+                      @for(playlist of _playlistService.playlists(); track playlist.id){
                         @defer (on viewport; prefetch on idle){
                           <app-user-playlist-list [playlist]="playlist"></app-user-playlist-list>
                         } @placeholder{
